tests/expectations/compiler/integers/i128/min_fail.out
Error [ESAZ0374007]: Binary operation `-170141183460469231731687303715884105727i128 - 2i128` failed at compile time: sub overflow.
    --> compiler-test:8:16
     |
   8 |         return a - 2i128; // This line attempts to return --170141183460469231731687303715884105729i128 however, the smallest i128 value is -170141183460469231731687303715884105728i128.
     |                ^^^^^^^^^
